docs: update README.md

--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -10,7 +10,7 @@ Pour utiliser cette librairie, il est nécessaire de s'authentifier auprès des 
 
 Pour participer et se tenir informé, **rejoins le serveur Discord: https://discord.gg/9u69mxsFT6**  
 
-**Remarques importantes:**
+## Remarques importantes:
 - Il est clairement mentionné que cette librairie est n'est pas officielle.
 - Ce module n'est pas une contrefaçon car il n'existe pas de module similaire édité officiellement.
 - Les utilisateurs ne peuvent accéder qu'à leurs propres données. Ils sont soumis au même processus d'authentification que celui implémenté dans l'application.
@@ -20,7 +20,7 @@ Pour participer et se tenir informé, **rejoins le serveur Discord: https://disc
 - Tout utilisateur de cette librairie a *a priori* lu l'entièreté du code de ce projet avant toute utilisation.
 - Eu égard l'ensemble de ces remarques, les contributeurs et *a fortiori* l'auteur du projet ne peuvent être tenus comme responsables de tout dommage potentiel.  
 
-**Liste des ENT utilisant le CMS Skolengo :**
+## Liste des ENT utilisant le CMS Skolengo :
 | Nom usuel de l'ENT           | Code ENT | URL OpenID Connect Discovery                               |
 |------------------------------|----------|------------------------------------------------------------|
 | Mon Bureau Numérique         | gdest    | https://sso.monbureaunumerique.fr/oidc/.well-known         |
@@ -37,8 +37,10 @@ Pour participer et se tenir informé, **rejoins le serveur Discord: https://disc
 | Eclat-BFC                    | bfc      | https://sso.eclat-bfc.fr/oidc/.well-known                  |
 | @ucollège84                  | cg84     | https://sso.aucollege84.vaucluse.fr/oidc/.well-known       |
 | ENT Val de Marne             | cg94     | https://sso.entvaldemarne.skolengo.com/oidc/.well-known    |
-| Skolengo 1                   | metab    | https://sso1.skolengo.com/oidc/.well-known                 |
-| Skolengo 2                   | metabam  | https://sso2.skolengo.com/oidc/.well-known                 |
+| Skolengo-Écoles primaires    | metab1d  | https://sso.skolengo.com/oidc/.well-known                  |
+| Skolengo-Collèges et Lycées  | mpdl     | https://sso.pdl.kosmoseducation.com/oidc/.well-known       |
+| AEFE                         | metab    | https://sso1.skolengo.com/oidc/.well-known                 |
+| AEFE Amérique - Pacifique    | metabam  | https://sso2.skolengo.com/oidc/.well-known                 |
 | Schulportal Ostbelgien       | cgb      | https://sso.schulen.be/oidc/.well-known                    |
 
 {{>main}}
