docs: update README.md

--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -47,4 +47,5 @@ Pour participer et se tenir informé, **rejoins le serveur Discord: https://disc
 
 ## Liens utiles
 - [JSON:API Specification](https://jsonapi.org/format)
+- [OpenID Connect Specification](https://openid.net/connect)
 - [Serveur Discord](https://discord.gg/9u69mxsFT6)
