--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -45,6 +45,8 @@ Pour participer et se tenir informé, **rejoins le serveur Discord: https://disc
 | AEFE Amérique - Pacifique    | metabam  | https://sso2.skolengo.com/oidc/.well-known                 |
 | Schulportal Ostbelgien       | cgb      | https://sso.schulen.be/oidc/.well-known                    |
 
+**Un wiki est disponible, celui-ci rassemble davantage d'informations sur le fonctionnement de l'API. [Ce wiki est disponible ici](https://github.com/maelgangloff/scolengo-api/wiki).**
+
 {{>main}}
 
 ## Liens utiles
