--- a/docs/README.hbs
+++ b/docs/README.hbs
@@ -50,6 +50,7 @@ Un wiki est disponible, celui-ci rassemble davantage d'informations sur le fonct
 {{>main}}
 
 ## Liens utiles
+- [Wiki](https://github.com/maelgangloff/scolengo-api/wiki)
+- [Serveur Discord](https://discord.gg/9u69mxsFT6)
 - [JSON:API Specification](https://jsonapi.org/format)
 - [OpenID Connect Specification](https://openid.net/connect)
-- [Serveur Discord](https://discord.gg/9u69mxsFT6)
